# ai-draw-guess

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: project-summary.md  settings.local.json
.github/workflows/: ci.yml
ai_draw_guess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: AGENTS.md  ai_client.py  config.py  main.py  prompt_builder.py  schemas.py
app/templates/: index.html
tests/: test_ai_client.py  test_config.py  test_main.py  test_prompt_builder.py
